Creates an invalid AXRange if start and end positions are invalid instead of DCHECKing

This creates safer code overall.
If start and end AXPositions are invalid for any reason we didn't contemplate, the browser doesn't crash but returns an AXRange that is explicitly marked invalid.
It's also a nice workaround until CSS decorations are supported in AXPosition.

TBR=dmazzoni@chromium.org, aleventhal@chromium.org

Bug: 852266
Change-Id: I94db8aeda296690a842b674ea27743dc573205d7
Reviewed-on: https://chromium-review.googlesource.com/1112968
Reviewed-by: Nektarios Paisios <nektar@chromium.org>
Commit-Queue: Nektarios Paisios <nektar@chromium.org>
Cr-Commit-Position: refs/heads/master@{#569941}
Former-commit-id: 7ed4cd1f125806d9c01e877bca5645bd10275fb3